log
Thu 20 Apr 2023 04:19:09 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c8a502d
Thu 20 Apr 2023 04:19:42 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
692690b
Thu 20 Apr 2023 04:31:30 PM UTC: 
 treemap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
 tests:  5|7
total_score: 5/70
60008f5
Thu 20 Apr 2023 04:31:49 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|7
total_score: 5/70
51d07b6
Thu 20 Apr 2023 04:32:45 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|6
total_score: 15/70
956c39c
Thu 20 Apr 2023 04:43:02 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
6237679
Thu 20 Apr 2023 04:45:15 PM UTC: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:111:16: error: returning ‘TreeNode *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  111 |     return tree->current;
      |            ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5b521d3
Thu 20 Apr 2023 04:45:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
3be9b20
Thu 20 Apr 2023 05:29:01 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  16|4
total_score: 30/70
14398f3
Thu 20 Apr 2023 05:45:48 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 35/70
f479f7b
Thu 20 Apr 2023 05:54:52 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
d56ecb4
Thu 20 Apr 2023 05:56:31 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  18|3
total_score: 35/70
bd85bd8
Thu 20 Apr 2023 05:57:03 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 35/70
a48d909
Thu 20 Apr 2023 06:10:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 35/70
b3d688a
Thu 20 Apr 2023 06:11:32 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 35/70
b85123d
Thu 20 Apr 2023 06:14:09 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  18|3
total_score: 35/70
5f6b775
Thu 20 Apr 2023 07:23:55 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  18|3
total_score: 35/70
d4db277
Thu 20 Apr 2023 07:26:14 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  18|3
total_score: 35/70
14181aa
Thu 20 Apr 2023 07:26:31 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  18|3
total_score: 35/70
fc3a9ac
Thu 20 Apr 2023 07:27:01 PM UTC: 
 treemap.c | 67 ++++++++++++++++++++++++++++++++++++++++++++-------------------
 1 file changed, 47 insertions(+), 20 deletions(-)
 tests:  0|0
6c86bc0
Thu 20 Apr 2023 07:28:09 PM UTC: 
 treemap.c | 66 ++++++++++++++++++---------------------------------------------
 1 file changed, 19 insertions(+), 47 deletions(-)
 tests:  18|3
total_score: 35/70
11150ea
Thu 20 Apr 2023 07:29:57 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
83319cd
Thu 20 Apr 2023 07:30:24 PM UTC: 
 treemap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  18|3
total_score: 35/70
cbb84af
Thu 20 Apr 2023 07:30:50 PM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
6181d7d
